--- a/package.json
+++ b/package.json
@@ -21,11 +21,22 @@
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "typescript": "^2.9.2"
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "@types/react": "^16.4.5",
+    "@types/react-dom": "^16.0.6",
+    "autoprefixer": "^8.6.4",
+    "css-loader": "^0.28.11",
+    "cssnano": "^3.10.0",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.5",
+    "postcss-nested": "^3.0.0",
+    "style-loader": "^0.21.0",
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
     "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
