--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "react for daum map",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode=development",
+    "prod-sample": "rm -rf dist-sample/ && webpack --mode=production",
+    "deploy-sample": "npm run prod-sample && firebase deploy"
   },
   "repository": {
     "type": "git",
